mobile-web: fix overlapping text and remove message outline
The blue outline for selected message has minimal functionality since
keyboard shortcuts and navigation can't be used. This also causes
accidental compose box opens, and leads to not-so-smooth scrolling.q
This has been fixed by not adding the selected_message class for
screens of 775px and below.

When a user sends consecutive messages, the message controls bar
overlaps with the message text.
This has been fixed by giving the message control bar a min height
and ensuring it appears above the message text

Fixes: #16488

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1178,12 +1178,16 @@ td.pointer {
 }
 
 .message_sender {
-    height: 0;
     vertical-align: top;
     position: relative;
 
     i.zulip-icon.bot {
         font-size: 12px;
+    }
+
+    @media (max-width: 500px) {
+        min-height: 20px;
+        display: inline-block;
     }
 }
 
